tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_compare_tab_unavailable.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────╮       │
│       │  Comparison unavailable                                      │       │
│       │                                                              │       │
│       │   • Could not parse cost from either plan                    │       │
│       │                                                              │       │
│       │  ──────────────────────────────────────────────────────────  │       │
│       │                                                              │───────┘
│       │  Left [Previous]             │ Right [Latest]                │───────┐
│       │  CREATE TABLE foo  (EXPLAIN) │ ALTER TABLE foo  (EXPLAIN)    │       │
│       │                                                              │       │
│       │  CREATE TABLE foo (id int)   │ ALTER TABLE foo ADD COLUMN …  │       │
│       │ ──────────────────────────────────────────────────────────── │       │
│       │  [NORMAL]                                             Ready  │       │
│       ╰ ^E: Explain │ ↑↓: Scroll │ Tab: Switch │ Esc: Close ─────────╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
