tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_confirming_high_matched.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL ── ⚠ HIGH ───────────────────────────────────────────────╮       │
│       │DROP TABLE users                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │⚠ HIGH RISK  DROP                                             │       │
│       │Confirm "users": > users█ ✓                                   │       │
│       │                                                              │       │
│       ╰ Enter: Execute │ Esc: Back ──────────────────────────────────╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Esc:Back
